--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Kevin George | Data Engineer | Dublin, Ireland"
+title: "Kevin George | Data Platform | Dublin, Ireland"
 description: "Resume Kevin George, Data Engineer , SQL Server , MCSA "
 
 # Build settings
