--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ resume_social_links:
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/kgeorge314"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://kgeorge314.github.io/resume"
+  resume_website_url:           "https://dataplatform.aletasystems.com/blog/"
 resume_print_social_links:      true
 
 # Design settings
