Updated to reflect latest contract

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 # OneView
 - company: "Oneview Healthcare (ASX: One)"
   position: Data Platform (Technical Architect)
-  duration: May, 2018 &mdash; December 2018
+  duration: Current | Contract Ending Jan 2020
   summary: | 
     <p>A greenfield project to build out a Data Platform for internal and external users.</p>
 
